# CalculatriceSimple

./: .coverage  .gitignore  README.md  UserInterface.py  addition.py  division.py  main.py  pyproject.toml  soustraction.py
.github/workflows/: ci.yaml
Calculator_Tests/: test_Functions.py  test_Security.py
Core_calculator/: main.py
User_interface/: UserInterface.py
