[tool.poetry]
name = "calculatricesimple"
version = "0.1.0"
description = ""
authors = ["MiroMilano59 <153615242+MiroMilano59@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pytest = "^8.2.0"
coverage = "^7.5.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
